# Homeros

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md
scripts/: sourcesGenerator.py  sourcesGenerator.sh
src/: audio_manager.cpp  audio_manager.hpp  game.cpp  input_handler.cpp  input_handler.hpp  main.cpp  renderer.cpp  renderer.hpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  window.cpp  window.hpp
src/scenes/: game_scene.cpp  game_scene.hpp  menu_scene.cpp  menu_scene.hpp  options_scene.cpp  options_scene.hpp  scene.hpp  splash_screen_scene.cpp  splash_screen_scene.hpp
src/ui/: pause_menu.cpp  pause_menu.hpp
